# SKP

./: .gitignore  LICENSE  README.md  annotated_s4.ipynb  convnextv2_3d.py  explore_llava_onevision.ipynb  inverted_residual_block_3d.ipynb  pyproject.toml  scratchpad.py  timm_layers_3d.py  transformer_encoder_layer.py
notebooks/: check_dataset.ipynb  reproduce_rad_dino_normalization.ipynb  test_albumentations.ipynb
notebooks/ISIC/: pseudolabel_2020_with_2019_models.ipynb
notebooks/boneage/: check_boneage_bbox_crop_dataset.ipynb  check_boneage_bbox_crop_models.ipynb  check_boneage_gradcam.ipynb  create_bone_age_categorical.ipynb  crop_all_radiographs_with_model.ipynb  test_models_test_set.ipynb
notebooks/chexmask/: check_dataset.ipynb  create_merged_nih_cxr_chexpert_df_with_age_view_sex.ipynb
notebooks/ich/: check_segmentation_dataset.ipynb  create_soft_pseudolabels_and_save_as_png.ipynb  extract_features_for_sequence_model.ipynb  get_best_thresholds_from_BHSD_CV_bleed_present_on_slices_only.ipynb  random_check_generated_segmentations.ipynb  segment_head_from_background.ipynb  segment_head_using_model.ipynb  test_huggingface_ct_crop.ipynb  test_segmentation_models.ipynb
notebooks/lines_and_tubes/: calculate_dice_score_segmentation.ipynb  pseudolabel_lines_and_tubes.ipynb  view_pseudo_masks.ipynb
notebooks/mammo/: eval_automodel.ipynb  eval_model.ipynb  test_model.ipynb
notebooks/totalclassifier/: calculate_dice_score_val_test.ipynb  check_segmentation_3d_dataset.ipynb  explore_augmentations.ipynb  extract_embeddings_with_augs.ipynb  (+3 more)
skp/: train.py
(+257 files in other folders)
